<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/title_button_size"
            android:layout_height="@dimen/title_button_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/title_leftbutton_marginleft"
            android:layout_marginStart="@dimen/title_leftbutton_marginleft"
            android:background="@mipmap/icon_back"
            android:contentDescription="@string/title_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/category_manage_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_name_size" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/categorylist_header"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#888" />

    <ListView
        android:id="@+id/lv_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>