<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/title_button_size"
            android:layout_height="@dimen/title_button_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/title_leftbutton_marginleft"
            android:layout_marginStart="@dimen/title_leftbutton_marginleft"
            android:background="@mipmap/icon_back"
            android:contentDescription="@string/title_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/entry_add_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_name_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_padding_vertical"
        android:paddingRight="@dimen/activity_padding_vertical">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/radio_background"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/entry_add_income"
                    android:textColor="@drawable/radio_textcolor"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_cost"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tv_income"
                    android:layout_toRightOf="@+id/tv_income"
                    android:background="@drawable/radio_background"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/entry_add_cost"
                    android:textColor="@drawable/radio_textcolor"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_category_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/entry_add_category_add"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>


            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="0.00"
                android:inputType="numberDecimal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/entry_add_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="2016-5-11"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="13:30"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

        <EditText
            android:id="@+id/et_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/tv_add"
            android:layout_below="@+id/ll"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/entry_add_info"
            android:padding="5dp" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Entry_add_add"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>